...

        <ImageView
            android:id="@+id/pokemon_image_view"
            android:layout_width="64dp"
            android:layout_height="64dp"
...
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintRight_toLeftOf="@+id/pokemon_type_text"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
...
                    android:layout_marginTop="8dp"
                    android:text="@string/configuration_item_title"
                    app:layout_constraintBottom_toTopOf="@+id/configuration_item_frame"
                    app:layout_constraintLeft_toLeftOf="@+id/configuration_item_frame"
                    app:layout_constraintRight_toRightOf="@+id/configuration_item_frame"
...
                        android:paddingRight="16dp"
                        android:visibility="gone"
                        tools:text="eviolite" />

                    <ImageView
                        android:id="@+id/configuration_item_empty_state"
                        style="@style/primary_text_with_background_style"
                        android:layout_width="48dp"
...
                    android:layout_marginTop="8dp"
                    android:text="@string/configuration_nature_title"
                    app:layout_constraintBottom_toTopOf="@+id/configuration_nature_frame"
                    app:layout_constraintHorizontal_bias="0.6"
                    app:layout_constraintLeft_toLeftOf="@+id/configuration_nature_frame"
...
                        android:gravity="center_vertical"
                        android:visibility="gone"
                        tools:text="modest" />

                    <ImageView
                        android:id="@+id/configuration_nature_empty_state"
                        style="@style/primary_text_with_background_style"
                        android:layout_width="48dp"
...
                    android:layout_marginTop="8dp"
                    android:text="@string/configuration_ability_title"
                    app:layout_constraintBottom_toTopOf="@+id/configuration_ability_frame"
                    app:layout_constraintHorizontal_bias="0.6"
                    app:layout_constraintLeft_toLeftOf="@+id/configuration_ability_frame"
...
                        android:gravity="center_vertical"
                        android:visibility="gone"
                        tools:text="magic guard" />

                    <ImageView
                        android:id="@+id/configuration_ability_empty_state"
                        style="@style/primary_text_with_background_style"
                        android:layout_width="48dp"
...

                <es.developer.achambi.pkmng.modules.create.view.StatEVView
                    android:id="@+id/configuration_hp_ev_stat_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <es.developer.achambi.pkmng.modules.create.view.StatEVView
                    android:id="@+id/configuration_attack_ev_stat_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <es.developer.achambi.pkmng.modules.create.view.StatEVView
                    android:id="@+id/configuration_defense_ev_stat_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <es.developer.achambi.pkmng.modules.create.view.StatEVView
                    android:id="@+id/configuration_sp_attack_ev_stat_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <es.developer.achambi.pkmng.modules.create.view.StatEVView
                    android:id="@+id/configuration_sp_defense_ev_stat_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <es.developer.achambi.pkmng.modules.create.view.StatEVView
                    android:id="@+id/configuration_speed_ev_stat_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <include
                    android:id="@+id/configuration_move_0_frame"
                    layout="@layout/configuration_move_view_layout"
                    android:layout_width="wrap_content"
...
                    app:layout_constraintLeft_toLeftOf="@+id/guideline5"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/configuration_move_1_frame"
                    android:layout_marginTop="0dp"
                    app:layout_constraintTop_toBottomOf="@+id/configuration_move_title_text" />
...
                    app:layout_constraintRight_toLeftOf="@+id/guideline5"
                    app:layout_constraintHorizontal_bias="0.491"
                    android:id="@+id/configuration_move_2_frame" />

                <include
                    android:id="@+id/configuration_move_3_frame"
                    layout="@layout/configuration_move_view_layout"
                    android:layout_width="wrap_content"
...

    <FrameLayout
        android:id="@+id/configuration_floating_save_button_middle"
        android:layout_width="86dp"
        android:layout_height="86dp"
...
