<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/ev_stat_value_text"
        style="@style/primary_text_small_with_background_style"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="4dp"
        android:cursorVisible="true"
        android:inputType="number"
        android:textSize="12sp"
        android:gravity="center"
        app:layout_constraintRight_toLeftOf="@+id/ev_stat_total_preview_value_text"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="255"
        android:saveEnabled="false"/>

    <TextView
        android:id="@+id/ev_stat_name_text"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        tools:text="Hp"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/ev_stat_total_preview_value_text"
        android:layout_width="28dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="320"
        android:textSize="12sp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

    <SeekBar
        android:id="@+id/ev_stat_seekbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toLeftOf="@+id/ev_stat_value_text"
        android:layout_marginEnd="8dp"
        app:layout_constraintLeft_toRightOf="@+id/ev_stat_name_text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:saveEnabled="false"/>
</merge>